<resources>
    <string name="app_name">Xpensor</string>
    <string name="transactions">Transactions</string>
    <string name="chart">Chart</string>
    <string name="amount">Amount</string>
    <string name="accounts">Accounts</string>
    <string name="converter">Converter</string>
    <string name="connection_error">Check your internet connection</string>
    <string name="add_transaction_button">Add transaction button</string>
    <string name="transaction_summary_dialog">From: %1$s \nTo: %2$s\nAmount: %3$s</string>
    <string name="convert">Convert</string>
    <string name="enter_amount_error">The amount entered is incorrect or not entered at all.</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="all_time">All time</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="forgot_alert_title">Forgot your password?</string>
    <string name="forgot_alert_message">You can restore access to the application only by erasing all data.</string>
    <string name="erase_data_alert_title">Erase application data?</string>
    <string name="erase_data_alert_message">Are you sure you want to do this? It will be impossible to restore the data. After deleting, the application will be closed.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="all_accounts">All accounts</string>
    <string name="displayed_currency">Displayed Currency</string>
    <string name="reset_pin_message">Click twice to reset the PIN and set a new one</string>
    <string name="reset_pin_message_repeat">Click to reset the PIN and set a new one</string>
    <string name="theme">Theme</string>
    <string name="no_transactions">No Transactions</string>
    <string name="add">"Add "</string>
    <string name="apply">Apply</string>
    <string name="adding">Adding</string>
    <string name="new_account">New Account</string>
    <string name="select_date">Custom Date</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="color_filter">Select Color Filter</string>
    <string name="name">Name</string>
    <string name="color_selected">Color Selected</string>
    <string name="account_empty_name_error">The name field is empty</string>
    <string name="account">Account</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="delete_account_alert_title">Are you sure you want to delete this account?</string>
    <string name="delete_account_alert_message">All transactions from this account will be deleted.</string>
    <string name="cancel">Cancel</string>
    <string name="total_account_amount">%1$s</string>
    <string name="preferred_currency">%1$s</string>
    <string name="expense">Expense</string>
    <string name="expenses_with_amount">Expenses \n %1$s</string>
    <string name="description">Description</string>
    <string name="to_category">To category</string>
    <string name="from_account">From account</string>
    <string name="delete_transaction_alert_title">Are you sure you want to delete this transaction?</string>
    <string name="enter_expense_error">Enter a valid expense number.</string>
    <string name="not_enough_funds">Selected account has insufficient funds for this transaction.</string>
    <string name="dismiss">Dismiss</string>
    <string name="filter_account">Filter account</string>
    <string name="enter_the_pin">Enter your pin</string>
    <string name="forgot_code">Forgot Code</string>
    <string name="set_the_pin">Set your new PIN</string>
    <string name="repeat_the_pin">Repeat the PIN</string>
    <string name="ok">OK</string>
    <string name="add_transaction">Add Transaction</string>
</resources>
