<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape"
    tools:context="com.jxareas.xpensor.ui.date.DateSelectorDialogFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_select_date"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/select_date"
            app:drawableStartCompat="@drawable/ic_date_range" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_today"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_select_date">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/today"
            app:drawableStartCompat="@drawable/ic_today" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_week"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@id/card_view_today"
        app:layout_constraintTop_toBottomOf="@id/card_view_select_date">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/week"
            app:drawableStartCompat="@drawable/ic_week" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_month"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_today">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/month"
            app:drawableStartCompat="@drawable/ic_month" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_year"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:cardCornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/card_view_month"
        app:layout_constraintTop_toBottomOf="@id/card_view_week">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/year"
            app:drawableStartCompat="@drawable/ic_year" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_all_time"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_year">

        <TextView
            style="@style/DateDialogItemStyle"
            android:text="@string/all_time"
            app:drawableStartCompat="@drawable/ic_infinity" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>