<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:transitionGroup="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_transactions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingBottom="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:itemCount="15"
        tools:listitem="@layout/card_item_transaction" />

    <ProgressBar
        android:id="@+id/progress_bar_transactions"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/text_view_no_transactions"
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_transactions"
        android:textSize="18sp"
        android:visibility="invisible"
        app:drawableTopCompat="@drawable/ic_no_transaction"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_new_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/margin_standard"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/add_transaction_button"
        android:text="@string/add"
        android:textColor="?attr/colorOnPrimarySurface"
        app:icon="@drawable/ic_add"
        app:iconTint="?attr/colorOnPrimarySurface"
        app:layout_anchorGravity="bottom|right|end"
        app:tint="?attr/colorOnPrimarySurface" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
