<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_high"
    tools:context="com.jxareas.xpensor.ui.transactions.actions.add.AddTransactionBottomSheet">

    <LinearLayout
        android:id="@+id/from_to_container"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/account_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green_yellow" />

        <View
            android:id="@+id/category_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red_purple" />

    </LinearLayout>

    <TextView
        android:id="@+id/from_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/from_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/account_name"
        app:layout_constraintStart_toStartOf="@id/from_account"
        app:layout_constraintTop_toTopOf="@+id/account_name"
        app:srcCompat="@drawable/ic_bank" />

    <TextView
        android:id="@+id/account_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:ellipsize="start"
        android:gravity="start"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/account_icon"
        app:layout_constraintTop_toBottomOf="@id/from_account"
        tools:text="Account name" />

    <TextView
        android:id="@+id/to_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/to_category"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/category_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/category_icon"
        app:layout_constraintTop_toBottomOf="@id/to_category"
        tools:text="Category name" />

    <ImageView
        android:id="@+id/category_icon"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/category_name"
        app:layout_constraintEnd_toEndOf="@id/to_category"
        app:layout_constraintTop_toTopOf="@+id/category_name"
        tools:srcCompat="@drawable/ic_bank" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_expense"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="12dp"
        android:hint="@string/expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from_to_container"
        app:startIconDrawable="@drawable/ic_money">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="12" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_description"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="12dp"
        android:hint="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_expense"
        app:startIconDrawable="@drawable/ic_edit">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="20" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_add_transaction"
        style="@style/TextAppearance.Xpensor.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_high"
        android:layout_marginTop="@dimen/margin_standard"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:text="@string/add_transaction"
        android:textColor="?attr/colorOnPrimarySurface"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_description" />

</androidx.constraintlayout.widget.ConstraintLayout>